plugins {
	id 'java'
}

group = 'dev.benwilliams'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	testImplementation(platform('org.junit:junit-bom:5.8.2'))
	testImplementation('org.junit.jupiter:junit-jupiter')
	testImplementation('org.assertj:assertj-core:3.+')
	testImplementation('org.mockito:mockito-core:2.+')
}

test {
	useJUnitPlatform()
	testLogging {
		events "passed", "skipped", "failed"
	}
}